--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
+@import url('https://fonts.googleapis.com/css?family=Barlow');
+
 body {
-  margin: 0;
+  /*   margin: 0;
+  padding: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Background */
+  background-image: linear-gradient(180deg, #f6d365 0%, #fda085 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  height: 100%;
+  font-size: 10px;
 }
