refactor vendor products and css

--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,3 +1,18 @@
+/* i am a bit confused on main vs cross axis and how align vs justify content affects the outcome */
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* position: fixed;: Sets the element to be positioned relative to the viewport, so it remains fixed even when the page is scrolled.
+  top: 50%; left: 50%;: Positions the element 50% from the top and left edges of the viewport.
+  transform: translate(-50%, -50%);: Moves the element back by 50% of its own width and height, effectively centering it in the viewport. */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .loading-text {
   text-align: center;
   padding-bottom: 20px;
